--- a/index.html
+++ b/index.html
@@ -35,78 +35,78 @@
 
 		<div class="cards">
 			<div class="card">
-				<img src="IMG/sydney.jpeg" alt="Australia">
+				<img src="img/sydney.jpeg" alt="Australia">
 				<h3>australia</h3>
 				
 			</div>
 
 			<div class="card">
-				<img src="IMG/nz.jpeg" alt="New Zealand">
+				<img src="img/nz.jpeg" alt="New Zealand">
 				<h3>new zealand</h3>
 			</div>
 
 				<div class="card">
-				<img src="IMG/paris.jpeg" alt="France">
+				<img src="img/paris.jpeg" alt="France">
 				<h3>paris</h3>
 			</div>
 
 			<div class="card">
-				<img src="IMG/london.jpeg" alt="UK">
+				<img src="img/london.jpeg" alt="UK">
 				<h3>uk</h3>
 			</div>
 
 			<div class="card">
-				<img src="IMG/gaudi.jpeg" alt="Spain">
+				<img src="img/gaudi.jpeg" alt="Spain">
 				<h3>spain</h3>
 			</div>
 
 			<div class="card">
-				<img src="IMG/roma.jpeg" alt="Italy">
+				<img src="img/roma.jpeg" alt="Italy">
 				<h3>italy</h3>
 			</div>
 
 			<div class="card">
-				<img src="IMG/lisbon.jpeg" alt="Portugal">
+				<img src="img/lisbon.jpeg" alt="Portugal">
 				<h3>portugal</h3>
 			</div>
 
 			<div class="card">
-				<img src="IMG/dublin.jpeg" alt="Ireland">
+				<img src="img/dublin.jpeg" alt="Ireland">
 				<h3>ireland</h3>
 			</div>
 
 			<div class="card">
-				<img src="IMG/singap.jpeg" alt="Singapore">
+				<img src="img/singap.jpeg" alt="Singapore">
 				<h3>singapore</h3>
 			</div>
 
 			<div class="card">
-				<img src="IMG/kl.jpeg" alt="Malaysia">
+				<img src="img/kl.jpeg" alt="Malaysia">
 				<h3>malaysia</h3>
 			</div>
 			
 			<div class="card">
-				<img src="IMG/montreal.jpeg" alt="Canada">
+				<img src="img/montreal.jpeg" alt="Canada">
 				<h3>canada</h3>
 			</div>
 
 			<div class="card">
-				<img src="IMG/usa.jpeg" alt="USA">
+				<img src="img/usa.jpeg" alt="USA">
 				<h3>usa</h3>
 			</div>
 
 			<div class="card">
-				<img src="IMG/lebanon.jpeg" alt="Lebanon">
+				<img src="img/lebanon.jpeg" alt="Lebanon">
 				<h3>lebanon</h3>
 			</div>
 
 			<div class="card">
-				<img src="IMG/qatar.jpeg" alt="Qatar">
+				<img src="img/qatar.jpeg" alt="Qatar">
 				<h3>qatar</h3>
 			</div>
 
 			<div class="card">
-				<img src="IMG/dubai.jpeg" alt="Emirates">
+				<img src="img/dubai.jpeg" alt="Emirates">
 				<h3>emirates</h3>
 			</div>
 
